# DESAFIO2

./: CMakeLists.txt  archivo.cpp  archivo.h  clasificado.h  eliminatoria.cpp  eliminatoria.h  equipo.cpp  equipo.h  estadisticas.h  fase.cpp  fase.h  fase_pre.cpp  fase_pre.h  grupo.cpp  grupo.h  jugador.cpp  jugador.h  main.cpp  metricas.cpp  metricas.h  partido.cpp  partido.h  torneo.cpp  torneo.h  util.cpp  util.h
